// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompletedTaskDetailsKebab should render Delete disabled 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="Task details menu toggle"
    class="pf-v6-c-menu-toggle pf-m-expanded pf-m-plain"
    data-ouia-component-id="OUIA-Generated-MenuToggle-plain-2"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    id="executed-task-kebab"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`CompletedTaskDetailsKebab should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="Task details menu toggle"
    class="pf-v6-c-menu-toggle pf-m-expanded pf-m-plain"
    data-ouia-component-id="OUIA-Generated-MenuToggle-plain-1"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    id="executed-task-kebab"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
